Re-enable external crash handler on windows
Signed-off-by: guillaume-haerinck <guillaume.haerinck@outlook.com>

--- a/Code/Editor/CMakeLists.txt
+++ b/Code/Editor/CMakeLists.txt
@@ -107,6 +107,7 @@ ly_add_target(
             Legacy::EditorCommon
             AZ::AzCore
             AZ::AzToolsFramework
+            AZ::ToolsCrashHandler
             Gem::LmbrCentral.Static
             AZ::AtomCore
             Gem::Atom_RPI.Edit
