Include crash handler to most standalone tools
Signed-off-by: guillaume-haerinck <guillaume.haerinck@outlook.com>

--- a/Code/Tools/ProjectManager/CMakeLists.txt
+++ b/Code/Tools/ProjectManager/CMakeLists.txt
@@ -45,6 +45,7 @@ ly_add_target(
             AZ::AzCore
             AZ::AzFramework
             AZ::AzToolsFramework
+            AZ::ToolsCrashHandler
 )
 
 ly_add_target(
