--- a/Code/Tools/LuaIDE/CMakeLists.txt
+++ b/Code/Tools/LuaIDE/CMakeLists.txt
@@ -34,12 +34,15 @@ ly_add_target(
             AZ::AzToolsFramework
             AZ::AzNetworking
             AZ::AzQtComponents
-            AZ::ToolsCrashHandler
             ${additional_dependencies}
     COMPILE_DEFINITIONS 
         PRIVATE
             STANDALONETOOLS_ENABLE_LUA_IDE
 )
+
+if(PAL_TRAIT_BUILD_EXTERNAL_CRASH_HANDLER_SUPPORTED)
+    ly_target_link_libraries(LuaIDE PRIVATE AZ::ToolsCrashHandler)
+endif()
 
 ly_set_gem_variant_to_load(TARGETS LuaIDE VARIANTS LuaTools)
 ly_add_dependencies(Editor LuaIDE)
