--- a/Gems/Atom/Tools/MaterialEditor/Code/CMakeLists.txt
+++ b/Gems/Atom/Tools/MaterialEditor/Code/CMakeLists.txt
@@ -37,13 +37,16 @@ ly_add_target(
             Include
     BUILD_DEPENDENCIES
         PRIVATE
-            AZ::ToolsCrashHandler
             Gem::CommonFeaturesAtom.Static
             Gem::AtomToolsFramework.Editor
             Gem::AtomToolsFramework.Static
     RUNTIME_DEPENDENCIES
         Gem::AtomToolsFramework.Editor
 )
+
+if(PAL_TRAIT_BUILD_EXTERNAL_CRASH_HANDLER_SUPPORTED)
+    ly_target_link_libraries(MaterialEditor PRIVATE AZ::ToolsCrashHandler)
+endif()
 
 ly_set_gem_variant_to_load(TARGETS MaterialEditor VARIANTS Tools)
 
