--- a/Gems/Atom/Tools/PassCanvas/Code/CMakeLists.txt
+++ b/Gems/Atom/Tools/PassCanvas/Code/CMakeLists.txt
@@ -37,12 +37,15 @@ ly_add_target(
             Include
     BUILD_DEPENDENCIES
         PRIVATE
-            AZ::ToolsCrashHandler
             Gem::CommonFeaturesAtom.Static
             Gem::AtomToolsFramework.Static
     RUNTIME_DEPENDENCIES
         Gem::AtomToolsFramework.Editor
 )
+
+if(PAL_TRAIT_BUILD_EXTERNAL_CRASH_HANDLER_SUPPORTED)
+    ly_target_link_libraries(PassCanvas PRIVATE AZ::ToolsCrashHandler)
+endif()
 
 ly_set_gem_variant_to_load(TARGETS PassCanvas VARIANTS Tools)
 
